--- a/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.resx
+++ b/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.resx
@@ -150,4 +150,7 @@
   <data name="EMAIL_EXIST" xml:space="preserve">
     <value>Email already registered.</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>Invalid email and/or password</value>
+  </data>
 </root>
