--- a/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.pt-BR.resx
+++ b/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.pt-BR.resx
@@ -156,4 +156,7 @@
   <data name="EMAIL_ALREADY_REGISTERED" xml:space="preserve">
     <value>Email já cadastrado</value>
   </data>
+  <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
+    <value>Senha deve ser diferente da senha atual.</value>
+  </data>
 </root>
