--- a/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.resx
+++ b/src/FinanceFlow.Exception/Resource/ResourceErrorsMessage.resx
@@ -156,4 +156,7 @@
   <data name="EMAIL_ALREADY_REGISTERED" xml:space="preserve">
     <value>Email already registered.</value>
   </data>
+  <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
+    <value>The password must be different from the current password.</value>
+  </data>
 </root>
